--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "prettier": "^3.7.4"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^5.2.1",
     "mongoose": "^9.1.2"
   }
 }
